--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </figure>
         <div class="car__shop">
             <i class="fa-solid fa-cart-plus" id="car__shop"></i>
+            <p class="count">0</p>
         </div>
     </header>
     <aside>
@@ -38,86 +39,9 @@
         </div>
     </aside>
     <main>
-        <section class="products">
+        <section class="products-content">
             <h2 class="center title">Products</h2>
-            <div class="products__article">
-                <div class="products-cards" id="1">
-                    <img src="/assets/imgs/12-2-computer-pc-download-png.png" alt=name>
-                    <p class="products-name">name: <span>computer</span></p>
-                    <p class="products-price">price: <span></span> 50$</p>
-                    <p class="stocks">stock: 7</p>
-                    <p class="btn" id="1">ADD</p>
-                </div>
-                <div class="products-cards" id="2">
-                    <img src="/assets/imgs/computer-lab-.png" alt=name>
-                    <p class="products-name">name: <span>computerAdvance</span></p>
-                    <p class="products-price">price: <span>18$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="2">ADD</p>
-                </div>
-                <div class="products-cards" id="3">
-                    <img src="/assets/imgs/Desktop-Computer-PNG-Transparent.png" alt=name>
-                    <p class="products-name">name: <span>computerAdvance2D</span> </p>
-                    <p class="products-price">price: <span>35$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="3">ADD</p>
-                </div>
-                <div class="products-cards" id="4">
-                    <img src="/assets/imgs/Desktop-Computer.png" alt=name>
-                    <p class="products-name">name: <span>computer 35GB ram</span> </p>
-                    <p class="products-price">price: <span>115$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="4">ADD</p>
-                </div>
-                <div class="products-cards" id="5">
-                    <img src="/assets/imgs/Playstation-4-Controller-.png" alt=name>
-                    <p class="products-name">name: <span>Controller</span> </p>
-                    <p class="products-price">price: <span> 250$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="5">ADD</p>
-                </div>
-                <div class="products-cards" id="6">
-                    <img src="/assets/imgs/PlayStation-4.png" alt=name>
-                    <p class="products-name">name: <span>playStation</span></p>
-                    <p class="products-price">price: <span>355$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="6">ADD</p>
-                </div>
-                <div class="products-cards" id="7">
-                    <img src="/assets/imgs/PlayStationConsole_bkg-transparent.png" alt=name>
-                    <p class="products-name">name: <span>console PS1</span></p>
-                    <p class="products-price">price: <span>385$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="7">ADD</p>
-                </div>
-                <div class="products-cards" id="8">
-                    <img src="/assets/imgs/smarthPhone.jpg" alt=name>
-                    <p class="products-name">name: <span>smarthPhone</span></p>
-                    <p class="products-price">price: <span>365$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="8">ADD</p>
-                </div>
-                <div class="products-cards" id="9">
-                    <img src="/assets/imgs/SmarthPhones.png" alt=name>
-                    <p class="products-name">name: <span>Phone</span></p>
-                    <p class="products-price">price: <span>215$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="9">ADD</p>
-                </div>
-                <div class="products-cards" id="10">
-                    <img src="/assets/imgs/technology.png" alt=name>
-                    <p class="products-name">name: <span>juego</span></p>
-                    <p class="products-price">price: <span>15$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="10">ADD</p>
-                </div>
-                <div class="products-cards" id="11">
-                    <img src="/assets/imgs/PlayStation-4.png" alt=name>
-                    <p class="products-name">name: <span>PlayStation-4</span></p>
-                    <p class="products-price">price: <span>236$</span> </p>
-                    <p class="stocks">stock: 5</p>
-                    <p class="btn" id="11">ADD</p>
-                </div>
+            <div class="products">
                 <!--Codigo inyectado desde JS-->
             </div>
         </section>
