--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
                 <h3>Technology Jhorman</h3>
             </div>
             <ul>
-                <li><a href="">Inicio</a></li>
-                <li><a href="">Acerca De</a></li>
+                <li><a href="">Home</a></li>
+                <li><a href="">Products</a></li>
+                <li><a href="">About Us</a></li>
                 <li><a href="">Contact</a></li>
-                <li><a href="">asdasdasd</a></li>
             </ul>
         </nav>
         <figure>
@@ -32,10 +32,16 @@
         </div>
     </header>
     <aside>
-        <p class="closed">X</p>
-        <h2 class="center">Shopping Cart</h2>
-        <div class="aside__content">
-            <!--Inyectar de Js-->
+        <div class="aside-header">
+            <p class="closed">X</p>
+            <h2 class="center">Shopping Cart</h2>
+            <div class="aside__content">
+                <!--Inyectar de Js-->
+            </div>
+        </div>
+        <div class="aside--footer">
+            <h4>Total Amount:</h4>
+            <p class="price">0</p>
         </div>
     </aside>
     <main>
@@ -67,7 +73,7 @@
         <div class="header-footer">
             <div>
                 <h3>Our information</h3>
-                <p>Toluca-Mexico</p>
+                <p>Venezuela-Maracaibo</p>
             </div>
 
             <div>
@@ -80,9 +86,9 @@
 
             <div>
                 <h3>Product</h3>
-                <p>Hoodie</p>
-                <p>Shirts</p>
-                <p class="padding-bottom">Sweatshirts</p>
+                <p>Computer</p>
+                <p>SmarthPhone</p>
+                <p class="padding-bottom">PlayStation</p>
             </div>
 
             <div class="footer-svgs">
